Refactor HTML structure and improve readability across multiple pages

--- a/process.html
+++ b/process.html
@@ -118,19 +118,30 @@
 			<section class="page-hero process-hero" id="hero">
 				<div class="container">
 					<div class="hero-badge" data-animate="fade-up">
-						<svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-							<path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"/>
+						<svg
+							width="16"
+							height="16"
+							viewBox="0 0 24 24"
+							fill="none"
+							stroke="currentColor"
+							stroke-width="2">
+							<path
+								d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2" />
 						</svg>
 						<span>Proven Methodology</span>
 					</div>
 					<div class="hero-content" data-animate="fade-up" data-delay=".1s">
 						<h1 class="page-title">From Vision to Reality</h1>
 						<p class="page-subtitle">
-							Our strategic process combines creativity, technology, and data-driven insights 
-							to deliver exceptional results with precision and efficiency.
+							Our strategic process combines creativity, technology, and
+							data-driven insights to deliver exceptional results with precision
+							and efficiency.
 						</p>
 					</div>
-					<div class="hero-process-preview" data-animate="fade-up" data-delay=".2s">
+					<div
+						class="hero-process-preview"
+						data-animate="fade-up"
+						data-delay=".2s">
 						<div class="process-step-mini">
 							<div class="step-number">01</div>
 							<div class="step-name">Discover</div>
