--- a/services.html
+++ b/services.html
@@ -190,37 +190,62 @@
 			<section class="page-hero services-hero" id="hero">
 				<div class="container">
 					<div class="hero-badge" data-animate="fade-up">
-						<svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-							<path d="M12 2L2 7l10 5 10-5-10-5z"/>
-							<path d="M2 17l10 5 10-5"/>
-							<path d="M2 12l10 5 10-5"/>
+						<svg
+							width="16"
+							height="16"
+							viewBox="0 0 24 24"
+							fill="none"
+							stroke="currentColor"
+							stroke-width="2">
+							<path d="M12 2L2 7l10 5 10-5-10-5z" />
+							<path d="M2 17l10 5 10-5" />
+							<path d="M2 12l10 5 10-5" />
 						</svg>
 						<span>Full-Service Digital Agency</span>
 					</div>
 					<div class="hero-content" data-animate="fade-up" data-delay=".1s">
 						<h1 class="page-title">Strategic Solutions That Drive Results</h1>
 						<p class="page-subtitle">
-							From brand strategy to web development, we deliver comprehensive digital solutions 
-							that transform businesses and accelerate growth through innovation and creativity.
+							From brand strategy to web development, we deliver comprehensive
+							digital solutions that transform businesses and accelerate growth
+							through innovation and creativity.
 						</p>
 					</div>
 					<div class="hero-features" data-animate="fade-up" data-delay=".2s">
 						<div class="feature-pill">
-							<svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-								<path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
-								<polyline points="22 4 12 14.01 9 11.01"/>
+							<svg
+								width="18"
+								height="18"
+								viewBox="0 0 24 24"
+								fill="none"
+								stroke="currentColor"
+								stroke-width="2">
+								<path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
+								<polyline points="22 4 12 14.01 9 11.01" />
 							</svg>
 							<span>Custom Solutions</span>
 						</div>
 						<div class="feature-pill">
-							<svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-								<path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
+							<svg
+								width="18"
+								height="18"
+								viewBox="0 0 24 24"
+								fill="none"
+								stroke="currentColor"
+								stroke-width="2">
+								<path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" />
 							</svg>
 							<span>Fast Delivery</span>
 						</div>
 						<div class="feature-pill">
-							<svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-								<path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
+							<svg
+								width="18"
+								height="18"
+								viewBox="0 0 24 24"
+								fill="none"
+								stroke="currentColor"
+								stroke-width="2">
+								<path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
 							</svg>
 							<span>Quality Guaranteed</span>
 						</div>
