--- a/work.html
+++ b/work.html
@@ -114,17 +114,24 @@
 			<section class="page-hero work-hero" id="hero">
 				<div class="container">
 					<div class="hero-badge" data-animate="fade-up">
-						<svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-							<circle cx="12" cy="12" r="10"/>
-							<path d="m9 12 2 2 4-4"/>
+						<svg
+							width="16"
+							height="16"
+							viewBox="0 0 24 24"
+							fill="none"
+							stroke="currentColor"
+							stroke-width="2">
+							<circle cx="12" cy="12" r="10" />
+							<path d="m9 12 2 2 4-4" />
 						</svg>
 						<span>200+ Successful Projects</span>
 					</div>
 					<div class="hero-content" data-animate="fade-up" data-delay=".1s">
 						<h1 class="page-title">Work That Speaks for Itself</h1>
 						<p class="page-subtitle">
-							Explore our diverse portfolio of branding, web development, and digital projects 
-							that have transformed businesses and delivered exceptional results.
+							Explore our diverse portfolio of branding, web development, and
+							digital projects that have transformed businesses and delivered
+							exceptional results.
 						</p>
 					</div>
 					<div class="hero-categories" data-animate="fade-up" data-delay=".2s">
