--- a/work.html
+++ b/work.html
@@ -4,6 +4,17 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Our Work — Infinite Pixels</title>
+		<link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="img/favicon/favicon-32x32.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="img/favicon/favicon-16x16.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -16,18 +27,44 @@
 		<nav id="site-header" class="floating-nav">
 			<div class="nav-container">
 				<a href="home.html" class="brand" data-animate="slide-right">
-					<span class="brand-logo"
-						><span class="logo-i">I</span><span class="logo-p">P</span></span
-					>
+					<img
+						src="img/no bg logos/logomarknobg.png"
+						alt="Infinite Pixels Logo"
+						class="brand-logo-img" />
+					<span class="brand-divider"></span>
+					<span class="brand-tagline">Digital Solutions</span>
 				</a>
 				<div class="nav-menu" id="navMenu">
-					<a href="home.html" class="nav-link">Home</a>
-					<a href="about.html" class="nav-link">About</a>
-					<a href="services.html" class="nav-link">Services</a>
-					<a href="work.html" class="nav-link active">Work</a>
-					<a href="process.html" class="nav-link">Process</a>
+					<a href="home.html" class="nav-link">
+						<span class="link-text">Home</span>
+					</a>
+					<a href="about.html" class="nav-link">
+						<span class="link-text">About</span>
+					</a>
+					<a href="services.html" class="nav-link">
+						<span class="link-text">Services</span>
+					</a>
+					<a href="work.html" class="nav-link active">
+						<span class="link-text">Work</span>
+					</a>
+					<a href="process.html" class="nav-link">
+						<span class="link-text">Process</span>
+					</a>
 				</div>
 				<div class="nav-actions">
+					<a href="home.html#contact" class="nav-cta">
+						<span>Get Started</span>
+						<svg
+							width="16"
+							height="16"
+							viewBox="0 0 24 24"
+							fill="none"
+							stroke="currentColor"
+							stroke-width="2">
+							<line x1="5" y1="12" x2="19" y2="12" />
+							<polyline points="12 5 19 12 12 19" />
+						</svg>
+					</a>
 					<button
 						class="theme-toggle"
 						id="themeToggle"
@@ -121,24 +158,29 @@
 							fill="none"
 							stroke="currentColor"
 							stroke-width="2">
-							<circle cx="12" cy="12" r="10" />
-							<path d="m9 12 2 2 4-4" />
+							<path
+								d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z" />
+							<polyline points="3.27 6.96 12 12.01 20.73 6.96" />
+							<line x1="12" y1="22.08" x2="12" y2="12" />
 						</svg>
-						<span>200+ Successful Projects</span>
+						<span>Creative Portfolio</span>
 					</div>
 					<div class="hero-content" data-animate="fade-up" data-delay=".1s">
-						<h1 class="page-title">Work That Speaks for Itself</h1>
+						<h1 class="page-title">Delivering Results Across All Services</h1>
 						<p class="page-subtitle">
-							Explore our diverse portfolio of branding, web development, and
-							digital projects that have transformed businesses and delivered
-							exceptional results.
+							Explore our diverse portfolio of website development, system
+							integration, graphic design, media production, social media
+							management, digital marketing, and AI automation projects that
+							have transformed businesses.
 						</p>
 					</div>
 					<div class="hero-categories" data-animate="fade-up" data-delay=".2s">
-						<div class="category-badge">Brand Strategy</div>
-						<div class="category-badge">Web Development</div>
+						<div class="category-badge">Website Development</div>
+						<div class="category-badge">System Integration</div>
+						<div class="category-badge">Graphic Design</div>
+						<div class="category-badge">Media Production</div>
+						<div class="category-badge">Social Media</div>
 						<div class="category-badge">Digital Marketing</div>
-						<div class="category-badge">Creative Design</div>
 						<div class="category-badge">AI Automation</div>
 					</div>
 				</div>
@@ -403,7 +445,7 @@
 							</div>
 						</div>
 
-						<!-- Project 6 - Design & Branding -->
+						<!-- Project 6 - Graphic Design -->
 						<div
 							class="portfolio-item"
 							data-category="design marketing"
@@ -418,7 +460,7 @@
 										<h3>Complete Brand Identity</h3>
 										<p>Luxury Hospitality Brand</p>
 										<div class="portfolio-tags">
-											<span>Brand Strategy</span>
+											<span>Logo Design</span>
 											<span>Visual Identity</span>
 											<span>Marketing Materials</span>
 										</div>
@@ -438,35 +480,36 @@
 							</div>
 							<div class="portfolio-details">
 								<div class="portfolio-meta">
-									<span class="category">Design & Branding</span>
+									<span class="category">Graphic Design</span>
 									<span class="year">2023</span>
 								</div>
 								<h3>Complete Brand Identity</h3>
 								<p>
-									Luxury brand identity that positioned client as premium market
-									leader, resulting in 300% increase in booking rates.
+									Comprehensive graphic design package including logo, brand
+									guidelines, and marketing materials that positioned client as
+									premium market leader with 300% booking increase.
 								</p>
 							</div>
 						</div>
 
-						<!-- Project 7 - Google Ads -->
+						<!-- Project 7 - System Integration -->
 						<div
 							class="portfolio-item"
-							data-category="marketing ai"
+							data-category="web automation"
 							data-animate="fade-up"
 							data-delay=".6s">
 							<div class="portfolio-image">
 								<img
 									src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800&q=80"
-									alt="Google Ads Campaign" />
+									alt="System Integration Project" />
 								<div class="portfolio-overlay">
 									<div class="portfolio-info">
-										<h3>AI-Optimized Google Ads</h3>
-										<p>E-learning Platform Growth</p>
+										<h3>Multi-Platform Integration</h3>
+										<p>Retail Management System</p>
 										<div class="portfolio-tags">
-											<span>Google Ads</span>
-											<span>AI Optimization</span>
-											<span>Conversion Tracking</span>
+											<span>API Integration</span>
+											<span>CRM Sync</span>
+											<span>Payment Gateway</span>
 										</div>
 									</div>
 									<div class="portfolio-actions">
@@ -484,14 +527,14 @@
 							</div>
 							<div class="portfolio-details">
 								<div class="portfolio-meta">
-									<span class="category">Google Ads</span>
+									<span class="category">System Integration</span>
 									<span class="year">2024</span>
 								</div>
-								<h3>AI-Optimized Google Ads</h3>
+								<h3>Multi-Platform Integration</h3>
 								<p>
-									Smart bidding and AI-powered optimization that reduced
-									cost-per-acquisition by 60% while increasing conversions by
-									280%.
+									Seamlessly connected e-commerce platform, CRM, inventory
+									management, and payment systems, reducing manual data entry by
+									95% and errors by 80%.
 								</p>
 							</div>
 						</div>
@@ -531,13 +574,14 @@
 							</div>
 							<div class="portfolio-details">
 								<div class="portfolio-meta">
-									<span class="category">Social Media</span>
+									<span class="category">Social Media Management</span>
 									<span class="year">2024</span>
 								</div>
 								<h3>Viral Social Media Campaign</h3>
 								<p>
-									Strategic campaign that generated 25M+ impressions, gained
-									250K+ followers, and drove $1.5M in sales within 3 months.
+									Comprehensive social media management and content strategy
+									that generated 25M+ impressions, gained 250K+ followers, and
+									drove $1.5M in sales within 3 months.
 								</p>
 							</div>
 						</div>
@@ -575,81 +619,6 @@
 				</div>
 			</section>
 
-			<!-- Client Testimonials -->
-			<section class="content-section">
-				<div class="container">
-					<div class="section-header" data-animate="fade-up">
-						<h2 class="section-title">What Our Clients Say</h2>
-						<p class="section-subtitle">
-							Hear from businesses we've transformed
-						</p>
-					</div>
-					<div class="testimonials-grid">
-						<div class="testimonial-card" data-animate="fade-up">
-							<div class="testimonial-content">
-								<p>
-									"The AI automation solution from Infinite Pixels reduced our
-									customer service workload by 75% while improving customer
-									satisfaction scores. It's been a game-changer for our
-									business."
-								</p>
-							</div>
-							<div class="testimonial-author">
-								<img
-									src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?auto=format&fit=crop&w=100&q=80"
-									alt="Michael Chen" />
-								<div class="author-info">
-									<span class="author-name">Michael Chen</span>
-									<span class="author-title">CEO, TechFlow Solutions</span>
-								</div>
-							</div>
-						</div>
-						<div
-							class="testimonial-card"
-							data-animate="fade-up"
-							data-delay=".1s">
-							<div class="testimonial-content">
-								<p>
-									"Their digital marketing strategy and Google Ads management
-									increased our revenue by 350% in just 6 months. The ROI has
-									been phenomenal and continues to grow."
-								</p>
-							</div>
-							<div class="testimonial-author">
-								<img
-									src="https://images.unsplash.com/photo-1494790108755-2616b612b786?auto=format&fit=crop&w=100&q=80"
-									alt="Sarah Martinez" />
-								<div class="author-info">
-									<span class="author-name">Sarah Martinez</span>
-									<span class="author-title">Founder, GrowthLab</span>
-								</div>
-							</div>
-						</div>
-						<div
-							class="testimonial-card"
-							data-animate="fade-up"
-							data-delay=".2s">
-							<div class="testimonial-content">
-								<p>
-									"The video campaign they produced for us went viral and helped
-									us secure Series A funding. Their creative team truly
-									understands how to tell a compelling brand story."
-								</p>
-							</div>
-							<div class="testimonial-author">
-								<img
-									src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=100&q=80"
-									alt="David Kim" />
-								<div class="author-info">
-									<span class="author-name">David Kim</span>
-									<span class="author-title">CTO, InnovateNow</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
 			<!-- CTA Section -->
 			<section class="cta-section">
 				<div class="container">
@@ -676,30 +645,72 @@
 				<div class="footer-content">
 					<div class="footer-brand">
 						<div class="brand">
-							<span class="brand-symbol">∞</span>
-							<span>Infinite Pixels</span>
+							<img
+								src="img/no bg logos/logomark2nobg.png"
+								alt="Infinite Pixels Logo"
+								class="footer-logo-img" />
 						</div>
 						<p class="footer-tagline">
 							Crafting digital experiences that scale beyond imagination.
 						</p>
 						<div class="footer-social">
-							<a href="#" aria-label="Twitter">
-								<svg viewBox="0 0 24 24" fill="currentColor">
-									<path
-										d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
-								</svg>
-							</a>
-							<a href="#" aria-label="LinkedIn">
-								<svg viewBox="0 0 24 24" fill="currentColor">
-									<path
-										d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" />
-								</svg>
-							</a>
-							<a href="#" aria-label="GitHub">
-								<svg viewBox="0 0 24 24" fill="currentColor">
-									<path
-										d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-								</svg>
+							<a
+								href="https://instagram.com/infinitepixels"
+								target="_blank"
+								rel="noopener noreferrer"
+								class="instagram-link"
+								aria-label="Follow us on Instagram">
+								<div class="instagram-icon">
+									<svg
+										viewBox="0 0 24 24"
+										fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<rect
+											x="2"
+											y="2"
+											width="20"
+											height="20"
+											rx="5"
+											stroke="url(#instagram-gradient)"
+											stroke-width="2" />
+										<circle
+											cx="12"
+											cy="12"
+											r="4"
+											stroke="url(#instagram-gradient)"
+											stroke-width="2" />
+										<circle
+											cx="18"
+											cy="6"
+											r="1.5"
+											fill="url(#instagram-gradient)" />
+										<defs>
+											<linearGradient
+												id="instagram-gradient"
+												x1="0%"
+												y1="0%"
+												x2="100%"
+												y2="100%">
+												<stop
+													offset="0%"
+													style="stop-color: #f09433; stop-opacity: 1" />
+												<stop
+													offset="25%"
+													style="stop-color: #e6683c; stop-opacity: 1" />
+												<stop
+													offset="50%"
+													style="stop-color: #dc2743; stop-opacity: 1" />
+												<stop
+													offset="75%"
+													style="stop-color: #cc2366; stop-opacity: 1" />
+												<stop
+													offset="100%"
+													style="stop-color: #bc1888; stop-opacity: 1" />
+											</linearGradient>
+										</defs>
+									</svg>
+								</div>
+								<span class="instagram-text">@infinitepixels</span>
 							</a>
 						</div>
 					</div>
@@ -740,5 +751,6 @@
 		</footer>
 
 		<script src="logic.js" defer></script>
+		<script src="js/Aurora.js"></script>
 	</body>
 </html>
