Add typewriter effect for FAQ answers and associated styles
- Implemented TypewriterEffect class to create a typewriter animation for FAQ answers.
- Integrated typewriter effect with existing FAQ expand/collapse functionality in FAQTypewriter class.
- Added CSS styles for typewriter effect, including cursor animation and visibility transitions.
- Introduced SVG icon for pricing section.

--- a/home.html
+++ b/home.html
@@ -396,7 +396,22 @@
                   </div>
                 </div>
                 <div class="value-item">
-                  <div class="value-icon">⚡</div>
+                  <div class="value-icon">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="34"
+                      height="34"
+                      viewBox="0 0 34 34"
+                      id="lightning"
+                    >
+                      <g id="layer_1">
+                        <path
+                          d="M19.842 20.124H25.8007C26.2315 20.124 26.5825 19.7731 26.5825 19.3422 26.5825 19.1327 26.4983 18.94 26.3631 18.8005L12.5289 2.0279C12.2559 1.6974 11.7635 1.6483 11.433 1.921 11.1909 2.1203 11.1027 2.4384 11.1764 2.7235H11.1725L14.1602 13.8779H8.1992C7.7683 13.8779 7.4174 14.2288 7.4174 14.6597 7.4174 14.8689 7.5016 15.0619 7.6368 15.2014L21.4733 31.9717C21.746 32.3022 22.2386 32.3515 22.5689 32.0786 22.811 31.8796 22.8994 31.5615 22.8254 31.2761H22.8294ZM24.1469 18.5604H18.8569 18.824C18.7563 18.5604 18.6908 18.5686 18.6231 18.5871 18.2064 18.6979 17.9583 19.1268 18.0689 19.5432L20.3919 28.2146 9.8529 15.4414H15.1449 15.1778C15.2456 15.4414 15.3111 15.4332 15.3788 15.4148 15.7955 15.304 16.0438 14.8751 15.933 14.4584L13.6103 5.7869Z"
+                          transform="matrix(1 0 0 -1 0 34)"
+                        ></path>
+                      </g>
+                    </svg>
+                  </div>
                   <div class="value-content">
                     <h4>Fast & Focused</h4>
                     <p>
@@ -406,7 +421,24 @@
                   </div>
                 </div>
                 <div class="value-item">
-                  <div class="value-icon">📈</div>
+                  <div class="value-icon">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="feather feather-bar-chart"
+                    >
+                      <line x1="12" y1="20" x2="12" y2="10"></line>
+                      <line x1="18" y1="20" x2="18" y2="4"></line>
+                      <line x1="6" y1="20" x2="6" y2="16"></line>
+                    </svg>
+                  </div>
                   <div class="value-content">
                     <h4>Real Results Already</h4>
                     <p>
