Enhance mobile responsiveness and visual consistency across various screen sizes
- Updated CSS styles for improved layout and spacing on ultra-small phones (≤360px).
- Adjusted aspect ratios and minimum heights for work images to prevent layout jumps.
- Implemented SVG icons for mobile navigation for better scalability and aesthetics.
- Refined typography and padding for better readability on smaller devices.
- Enhanced footer links for better organization and accessibility.
- Added JavaScript files for improved functionality and interactivity.

--- a/home.html
+++ b/home.html
@@ -734,7 +734,7 @@
           <div class="featured-work-grid">
             <!-- Dr. Naglaa Clinic Project -->
             <div class="work-card" data-animate="fade-up">
-              <div class="work-image">
+              <div class="work-image natural-fit">
                 <img
                   src="img/projects/image-1760566359881.png"
                   alt="Dr. Naglaa Clinic Website"
@@ -781,7 +781,7 @@
 
             <!-- Teacher Ahmed Fadl Project -->
             <div class="work-card" data-animate="fade-up" data-delay=".1s">
-              <div class="work-image">
+              <div class="work-image natural-fit">
                 <img
                   src="img/projects/image-1760566337057.png"
                   alt="Teacher Ahmed Fadl Platform"
@@ -1065,29 +1065,21 @@
           <div class="footer-links">
             <div class="footer-column">
               <h4>Services</h4>
-              <a href="services.html">Website Development</a>
-              <a href="services.html">System Integration</a>
-              <a href="services.html">Graphic Design</a>
-              <a href="services.html">Media Production</a>
-              <a href="services.html">Social Media Management</a>
-              <a href="services.html">Digital Marketing</a>
               <a href="services.html">AI Automation</a>
+              <a href="services.html">Web Development</a>
+              <a href="services.html">Social Media Managment</a>
+              <a href="services.html">Media Production</a>
+              <a href="services.html">Graphic Design</a>
+              <a href="services.html">System Integration</a>
             </div>
             <div class="footer-column">
-              <h4>Company</h4>
-              <a href="about.html">About Us</a>
-              <a href="work.html">Our Work</a>
-              <a href="process.html">Process</a>
+              <h4>Quick Links</h4>
+              <a href="home.html">Home</a>
+              <a href="about.html">About</a>
               <a href="services.html">Services</a>
-            </div>
-            <div class="footer-column">
-              <h4>Contact</h4>
-              <p style="color: var(--text-secondary); font-size: 0.9375rem">
-                Email: info@infinitepixels.com
-              </p>
-              <p style="color: var(--text-secondary); font-size: 0.9375rem">
-                Phone: +1 (555) 123-4567
-              </p>
+              <a href="work.html">Work</a>
+              <a href="process.html">Process</a>
+              <a href="home.html#contact">Contact</a>
             </div>
           </div>
         </div>
