--- a/services.html
+++ b/services.html
@@ -234,7 +234,19 @@
             <span class="item-arrow">›</span>
           </a>
           <a class="mobile-nav-item" href="process.html"
-            ><span class="item-icon">🔁</span
+            ><span class="item-icon">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path
+                  d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"
+                />
+              </svg> </span
             ><span class="item-label">Process</span
             ><span class="item-arrow">›</span></a
           >
@@ -707,6 +719,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="48"
                   height="48"
+                  viewBox="0 0 48 48"
                   id="money"
                   fill="currentColor"
                 >
@@ -1075,23 +1088,21 @@
           <div class="footer-links">
             <div class="footer-column">
               <h4>Services</h4>
+              <a href="services.html">AI Automation</a>
               <a href="services.html">Web Development</a>
-              <a href="services.html">UI/UX Design</a>
-              <a href="services.html">Brand Strategy</a>
-              <a href="services.html">Performance Optimization</a>
+              <a href="services.html">Social Media Managment</a>
+              <a href="services.html">Media Production</a>
+              <a href="services.html">Graphic Design</a>
+              <a href="services.html">System Integration</a>
             </div>
             <div class="footer-column">
-              <h4>Company</h4>
-              <a href="about.html">About Us</a>
-              <a href="work.html">Our Work</a>
+              <h4>Quick Links</h4>
+              <a href="home.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="services.html">Services</a>
+              <a href="work.html">Work</a>
               <a href="process.html">Process</a>
-              <a href="contact.html">Contact</a>
-            </div>
-            <div class="footer-column">
-              <h4>Resources</h4>
-              <a href="#">Blog</a>
-              <a href="#">Case Studies</a>
-              <a href="#">Insights</a>
+              <a href="home.html#contact">Contact</a>
             </div>
           </div>
         </div>
