--- a/about.html
+++ b/about.html
@@ -532,6 +532,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="48"
                   height="48"
+                  viewBox="0 0 48 48"
                   id="money"
                 >
                   <path
@@ -784,23 +785,21 @@
           <div class="footer-links">
             <div class="footer-column">
               <h4>Services</h4>
+              <a href="services.html">AI Automation</a>
               <a href="services.html">Web Development</a>
-              <a href="services.html">UI/UX Design</a>
-              <a href="services.html">Brand Strategy</a>
-              <a href="services.html">Performance Optimization</a>
+              <a href="services.html">Social Media Managment</a>
+              <a href="services.html">Media Production</a>
+              <a href="services.html">Graphic Design</a>
+              <a href="services.html">System Integration</a>
             </div>
             <div class="footer-column">
-              <h4>Company</h4>
-              <a href="about.html">About Us</a>
-              <a href="work.html">Our Work</a>
+              <h4>Quick Links</h4>
+              <a href="home.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="services.html">Services</a>
+              <a href="work.html">Work</a>
               <a href="process.html">Process</a>
-              <a href="contact.html">Contact</a>
-            </div>
-            <div class="footer-column">
-              <h4>Resources</h4>
-              <a href="#">Blog</a>
-              <a href="#">Case Studies</a>
-              <a href="#">Insights</a>
+              <a href="home.html#contact">Contact</a>
             </div>
           </div>
         </div>
