--- a/work.html
+++ b/work.html
@@ -24,6 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Michroma:wght@400&family=Inter:wght@300;400;500;600;700;800&family=Plus+Jakarta+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preload" href="style.css" as="style" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -32,7 +33,10 @@
       <div class="nav-container">
         <a href="home.html" class="brand" data-animate="slide-right">
           <img
-            src="img/no bg logos/logomarknobg.png"
+            src="img/no bg logos/logomarknobg.webp"
+            width="120"
+            height="120"
+            loading="lazy"
             alt="Infinite Pixels Logo"
             class="brand-logo-img"
           />
@@ -291,7 +295,10 @@
             >
               <div class="portfolio-image">
                 <img
-                  src="img/projects/image-1760566359881.png"
+                  src="img/projects/image-1760566359881.webp"
+                  width="600"
+                  height="400"
+                  loading="lazy"
                   alt="Dr. Naglaa Clinic Website"
                 />
                 <div class="portfolio-overlay">
@@ -349,7 +356,10 @@
             >
               <div class="portfolio-image">
                 <img
-                  src="img/projects/image-1760566337057.png"
+                  src="img/projects/image-1760566337057.webp"
+                  width="600"
+                  height="400"
+                  loading="lazy"
                   alt="Teacher Ahmed Fadl Website"
                 />
                 <div class="portfolio-overlay">
@@ -419,7 +429,13 @@
               data-animate="fade-up"
             >
               <div class="portfolio-image">
-                <img src="img/projects/eclat.png" alt="Eclat Restaurant Demo" />
+                <img
+                  src="img/projects/eclat.webp"
+                  alt="Eclat Restaurant Demo"
+                  width="600"
+                  height="400"
+                  loading="lazy"
+                />
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
                     <h3>Eclat Restaurant</h3>
@@ -465,8 +481,11 @@
             >
               <div class="portfolio-image">
                 <img
-                  src="img/projects/velaro.png"
+                  src="img/projects/velaro.webp"
                   alt="Velaro Marketing Agency Demo"
+                  width="600"
+                  height="400"
+                  loading="lazy"
                 />
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
@@ -512,7 +531,13 @@
               data-delay=".2s"
             >
               <div class="portfolio-image">
-                <img src="img/projects/xhale.png" alt="Xhale Gym Demo" />
+                <img
+                  src="img/projects/xhale.webp"
+                  alt="Xhale Gym Demo"
+                  width="600"
+                  height="400"
+                  loading="lazy"
+                />
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
                     <h3>Xhale</h3>
@@ -673,7 +698,10 @@
           <div class="footer-brand">
             <div class="brand">
               <img
-                src="img/no bg logos/logomark2nobg.png"
+                src="img/no bg logos/logomark2nobg.webp"
+                width="120"
+                height="120"
+                loading="lazy"
                 alt="Infinite Pixels Logo"
                 class="footer-logo-img"
               />
@@ -733,15 +761,13 @@
             reserved.
           </p>
           <div class="footer-bottom-links">
-            <a href="/privacy">Privacy Policy</a>
-            <a href="/terms">Terms of Service</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="terms-of-service.html">Terms of Service</a>
           </div>
         </div>
       </div>
     </footer>
     <script src="logic.js" defer></script>
-    <script src="js/Aurora.js"></script>
-    <script src="logic.js" defer></script>
-    <script src="js/Aurora.js"></script>
+    <script src="js/Aurora.js" defer></script>
   </body>
 </html>
