--- a/process.html
+++ b/process.html
@@ -23,6 +23,9 @@
       href="https://fonts.googleapis.com/css2?family=Michroma:wght@400&family=Inter:wght@300;400;500;600;700;800&family=Plus+Jakarta+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" href="style.css" as="style" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -31,7 +34,10 @@
       <div class="nav-container">
         <a href="home.html" class="brand" data-animate="slide-right">
           <img
-            src="img/no bg logos/logomarknobg.png"
+            src="img/no bg logos/logomarknobg.webp"
+            width="120"
+            height="120"
+            loading="lazy"
             alt="Infinite Pixels Logo"
             class="brand-logo-img"
           />
@@ -604,7 +610,10 @@
           <div class="footer-brand">
             <div class="brand">
               <img
-                src="img/no bg logos/logomark2nobg.png"
+                src="img/no bg logos/logomark2nobg.webp"
+                width="120"
+                height="120"
+                loading="lazy"
                 alt="Infinite Pixels Logo"
                 class="footer-logo-img"
               />
@@ -663,14 +672,14 @@
             reserved.
           </p>
           <div class="footer-bottom-links">
-            <a href="/privacy">Privacy Policy</a>
-            <a href="/terms">Terms of Service</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="terms-of-service.html">Terms of Service</a>
           </div>
         </div>
       </div>
     </footer>
 
     <script src="logic.js" defer></script>
-    <script src="js/Aurora.js"></script>
+    <script src="js/Aurora.js" defer></script>
   </body>
 </html>
