Revert "Refactor HTML and CSS for improved performance and accessibility"
This reverts commit 13d95d7cf7f6384a15a4da9f70fa7d291a8a19a9.

--- a/work.html
+++ b/work.html
@@ -24,7 +24,6 @@
       href="https://fonts.googleapis.com/css2?family=Michroma:wght@400&family=Inter:wght@300;400;500;600;700;800&family=Plus+Jakarta+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preload" href="style.css" as="style" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -33,10 +32,7 @@
       <div class="nav-container">
         <a href="home.html" class="brand" data-animate="slide-right">
           <img
-            src="img/no bg logos/logomarknobg.webp"
-            width="120"
-            height="120"
-            loading="lazy"
+            src="img/no bg logos/logomarknobg.png"
             alt="Infinite Pixels Logo"
             class="brand-logo-img"
           />
@@ -295,10 +291,7 @@
             >
               <div class="portfolio-image">
                 <img
-                  src="img/projects/image-1760566359881.webp"
-                  width="600"
-                  height="400"
-                  loading="lazy"
+                  src="img/projects/image-1760566359881.png"
                   alt="Dr. Naglaa Clinic Website"
                 />
                 <div class="portfolio-overlay">
@@ -356,10 +349,7 @@
             >
               <div class="portfolio-image">
                 <img
-                  src="img/projects/image-1760566337057.webp"
-                  width="600"
-                  height="400"
-                  loading="lazy"
+                  src="img/projects/image-1760566337057.png"
                   alt="Teacher Ahmed Fadl Website"
                 />
                 <div class="portfolio-overlay">
@@ -429,13 +419,7 @@
               data-animate="fade-up"
             >
               <div class="portfolio-image">
-                <img
-                  src="img/projects/eclat.webp"
-                  alt="Eclat Restaurant Demo"
-                  width="600"
-                  height="400"
-                  loading="lazy"
-                />
+                <img src="img/projects/eclat.png" alt="Eclat Restaurant Demo" />
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
                     <h3>Eclat Restaurant</h3>
@@ -481,11 +465,8 @@
             >
               <div class="portfolio-image">
                 <img
-                  src="img/projects/velaro.webp"
+                  src="img/projects/velaro.png"
                   alt="Velaro Marketing Agency Demo"
-                  width="600"
-                  height="400"
-                  loading="lazy"
                 />
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
@@ -531,13 +512,7 @@
               data-delay=".2s"
             >
               <div class="portfolio-image">
-                <img
-                  src="img/projects/xhale.webp"
-                  alt="Xhale Gym Demo"
-                  width="600"
-                  height="400"
-                  loading="lazy"
-                />
+                <img src="img/projects/xhale.png" alt="Xhale Gym Demo" />
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
                     <h3>Xhale</h3>
@@ -698,10 +673,7 @@
           <div class="footer-brand">
             <div class="brand">
               <img
-                src="img/no bg logos/logomark2nobg.webp"
-                width="120"
-                height="120"
-                loading="lazy"
+                src="img/no bg logos/logomark2nobg.png"
                 alt="Infinite Pixels Logo"
                 class="footer-logo-img"
               />
@@ -761,13 +733,15 @@
             reserved.
           </p>
           <div class="footer-bottom-links">
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="terms-of-service.html">Terms of Service</a>
+            <a href="/privacy">Privacy Policy</a>
+            <a href="/terms">Terms of Service</a>
           </div>
         </div>
       </div>
     </footer>
     <script src="logic.js" defer></script>
-    <script src="js/Aurora.js" defer></script>
+    <script src="js/Aurora.js"></script>
+    <script src="logic.js" defer></script>
+    <script src="js/Aurora.js"></script>
   </body>
 </html>
